tests/errors/undefined-symbol-pc.p8
/ This program produces an undefined symbol error when trying to set the PC to
/ a symbol that has not been previously defined.

*ERROR
$
